--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
   "description": "An OmniFocus plugin bundle to assist with the syncing of plugin preferences across devices.",
   "version": "4.4.0",
   "actions": [
-    { "identifier": "goToSyncedPrefProject"},
-    { "identifier": "hideSyncedPrefProject"}
+    { "identifier": "goToSyncedPrefProject", "image": "folder.fill.badge.gear"},
+    { "identifier": "hideSyncedPrefProject", "image": "folder.badge.gear"}
   ],
   "libraries": [
     {
